maui-mvvm blog post.

--- a/maui-to-do/maui-to-do.csproj
+++ b/maui-to-do/maui-to-do.csproj
@@ -49,9 +49,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="ViewModels\" />
 	  <Folder Include="Views\" />
 	  <Folder Include="Services\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview4" />
 	</ItemGroup>
 
 </Project>
